# TapSDK-CPP

./: CMakeLists.txt  README.md
.github/workflows/: android.yml  apple.yml  headers.yml  ios.yml  linux.yml  macos.yml  windows.yml
android/: local.properties  settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/taptap/tapsdk/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/taptap/tapsdk/: App.java  FirstFragment.java  MainActivity.java  SecondFragment.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/menu/: menu_main.xml
android/app/src/main/res/navigation/: nav_graph.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/gradle/wrapper/: gradle-wrapper.properties
android/sdk/: build.gradle
android/sdk/src/androidTest/java/com/taptap/tapsdk/: ExampleInstrumentedTest.java
android/sdk/src/main/java/com/taptap/tapsdk/: TapSDK.java  TapSDKLoader.java
android/sdk/src/test/java/com/taptap/tapsdk/: ExampleUnitTest.java
android/sdk/swig/csharp/com/taptap/tapsdk/bindings/csharp/: Config.cs  Device.cs  Game.cs  Platform.cs  PlatformPINVOKE.cs  TDSUser.cs  TapSDK.cs  TapSDKPINVOKE.cs  Window.cs
android/sdk/swig/java/com/taptap/tapsdk/bindings/java/: Config.java  Device.java  Game.java  Platform.java  PlatformJNI.java  TDSUser.java  TapSDK.java  TapSDKJNI.java  Window.java
ios/: CMakeLists.txt  Info.plist  LaunchScreen.storyboard
ios/src/: AppDelegate.h  AppDelegate.mm  SceneDelegate.h  SceneDelegate.mm  ViewController.h  ViewController.mm  main.mm
scripts/: build-android.sh  build-host.sh  build-ios-shared.sh  build-ios-sim-a64.sh  build-ios-sim.sh  build-ios.sh  build-mac-arm64.sh  build-mac-x64.sh  build-macos.sh  build-switch.sh  build-tvos-sim.sh  build-tvos.sh  gen-xcode.sh
source/: CMakeLists.txt
source/base/: CMakeLists.txt  alignment.h  base64.cpp  base64.h  blocking_queue.h  cityhash.cpp  cityhash.h  common_funcs.h  event.h  expected.h  file.cpp  file.h  hmac.h  logging.cpp  logging.h  md5.cpp  md5.h  scoped_generic.h  sha1.cpp  sha1.h  spin_lock.cpp  spin_lock.h  stack_container.h  swap.h  thread.cpp  thread.h  timer.cpp  timer.h  types.h  uuid.cpp  uuid.h
source/bindings/: CMakeLists.txt  bindings.cpp  bindings.h  bindings.swg  platform.swg  tapsdk.swg  tapsdk_api.swg
source/bindings/csharp/: CMakeLists.txt  gather_swig_csharp.cmake  swig.cmake
source/bindings/java/: CMakeLists.txt  swig.cmake
source/core/: CMakeLists.txt  core.cpp  core.h  events.h  runtime.cpp  runtime.h
source/duration/: CMakeLists.txt  dur_model.cpp  dur_model.h  duration.cpp  duration.h  model.cpp  model.h  persistence.cpp  persistence.h
source/include/: tapsdk.h
source/login/: CMakeLists.txt  login_model.cpp  model.cpp  model.h  tap_login.cpp  tap_login.h
source/net/: CMakeLists.txt  coro_httpclient.cpp  coro_httpclient.h  httpclient.cpp  httpclient.h  network.cpp  network.h
source/platform/: CMakeLists.txt  platform.cpp  platform.h
source/sdk/: CMakeLists.txt  apple.cmake  config.h  future.h  ios.cmake  platform.cpp  platform.h  result.h  tapsdk.cpp  tapsdk.h  tapsdk_api.cpp  tapsdk_api.h
source/tests/: CMakeLists.txt  main.cpp  main_case.cpp
source/tracker/: CMakeLists.txt  cache.cpp  cache.h  model.cpp  model.h  tap_tracker.h  tracker_impl.cpp  tracker_impl.h
source/tracker/proto/: track_config_cache.proto  track_log_bean.proto  track_msg_cache.proto
switch/: SwitchBuild.props  toolchain-switch.cmake
